Fixed content spacing

--- a/docs/VVP.css
+++ b/docs/VVP.css
@@ -328,9 +328,9 @@ header {
 }
 
 .content {
-    position: static;
-    width: 100%;
-    max-width: 1500px;
+    position: Absolute;
+    width: auto;
+    max-width: 100%;
     height: auto;
     padding-top: 0px;
     padding-bottom: 5px;
